2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for OSX build.

	* GForge/Makefile:
	Add ROOT_CFLAGS to CFLAGS.
	Add LDFLAGS to link command.

2009-12-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Add variants of GenerateTriangleColorsFromVertexColors() functions
	that take external vertex/triangle color arrays as arguments.

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	* Rnr/GL/TringTvor_GL_Rnr.h:
	Implement also as a class. It is now possible to attach external
	color arrays into the rendering pipeline.
	It is trivial to extend this for textures, too.

	Improve the static do-it-all function.

	* Rnr/GL/RectTerrain_GL_Rnr.cxx:
	* Rnr/GL/RectTerrain_GL_Rnr.h:
	Use the new TringTvor rendering code.

2009-12-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZRibbon.cxx:
	* Glasses/ZRibbon.h:
	Remove obsolete glass.

	* Glasses/RGBAPalette.cxx:
	* Glasses/RGBAPalette.h:
	* Glasses/RectTerrain.cxx:
	* Glasses/RectTerrain.h:
	* glass.list:
	Updates to account for removal of ZRibbon.

2009-11-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Allow un-registration of time-maker clients.

	* Glasses/TimeMaker.cxx:
	* Glasses/TimeMaker.h:
	Add function RemoveClient(ZGlass* lens).

	* Stones/TringTvor.cxx:
	Add some comments.

2009-08-14  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/ZGlProgram_GL_Rnr.cxx:
	* Rnr/GL/ZGlProgram_GL_Rnr.h:
	Restructure shader program code by introducing helper methods:
	  void clean_program();
	  void check_program_state(RnrDriver* rd);
	  void bind_program();
	  void unbind_program();

	* GForge/gforge.c:
	Add missing argument to a printf.

2009-07-19  Matevz Tadel  <matevz.tadel@ijs.si>

	Improved handling of uniform GLSL variables.

	* Glasses/ZGlProgram.cxx:
	* Glasses/ZGlProgram.h:
	Add class documentation and todo list.
	Move SGlUniform.h include into source file.

	* Stones/SGlUniform.cxx:
	* Stones/SGlUniform.h:
	Change order of variables in data-ptr union.
	Remove debug printout.
