@@ -42,7 +42,7 @@ ClassImp(TringTvor);
 void TringTvor::_init()
 {
   mBBoxOK = false;
-  mMinEdgeLen = mMaxEdgeLen = 0;
+  mMaxVertexDistance = mMinEdgeLen = mMaxEdgeLen = 0;
 
   mNStripEls   = 0;  mStripEls    = 0;  mStripTrings = 0;
   mNStrips     = 0;  mStripBegs   = 0;  mStripLens   = 0;
@@ -172,7 +172,7 @@ void TringTvor::CalculateBoundingBox()
   if (mNVerts == 0 || mNTrings == 0) {
     memset(mMinMaxBox, 0, 6*sizeof(Float_t));
     memset(mCtrExtBox, 0, 6*sizeof(Float_t));
-    mMinEdgeLen = mMaxEdgeLen = 0;
+    mMaxVertexDistance = mMinEdgeLen = mMaxEdgeLen = 0;
     return;
   }
 
@@ -180,13 +180,19 @@ void TringTvor::CalculateBoundingBox()
   m[0] = M[0] = V[0];
   m[1] = M[1] = V[1];
   m[2] = M[2] = V[2];
+  mMaxVertexDistance = V[0]*V[0] + V[1]*V[1] + V[2]*V[2];
   V += 3;
-  for (Int_t v = 1; v < mNVerts; ++v) {
+  for (Int_t v = 1; v < mNVerts; ++v, V+=3)
+  {
     if (V[0] < m[0]) m[0] = V[0]; else if (V[0] > M[0]) M[0] = V[0];
     if (V[1] < m[1]) m[1] = V[1]; else if (V[1] > M[1]) M[1] = V[1];
     if (V[2] < m[2]) m[2] = V[2]; else if (V[2] > M[2]) M[2] = V[2];
-    V += 3;
+
+    Float_t vd = V[0]*V[0] + V[1]*V[1] + V[2]*V[2];
+    if (vd > mMaxVertexDistance)
+      mMaxVertexDistance = vd;
   }
+  mMaxVertexDistance = sqrtf(mMaxVertexDistance);
 
   Float_t *C = mCtrExtBox, *E = C + 3;
   C[0] = 0.5f*(M[0]+m[0]); C[1] = 0.5f*(M[1]+m[1]); C[2] = 0.5f*(M[2]+m[2]);
